<resources>
    <string name="app_name">MicroCart</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="photo_image">photo_image</string>
    <string name="item_details">Item Details</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="size">Size:</string>
    <string name="delete">delete</string>
    <string name="cart_empty_message">Add items to cart.</string>
    <string name="order_placed">Order placed</string>
    <string name="success">Order has been successful!\n\nConfirmation has been sent to your email\n\nYour items will be with you shortly.</string>
    <string name="save">Save</string>
    <string name="revert_changes">Revert changes</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
</resources>