<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editFirstNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lastFirstNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/streetLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/street"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numberLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/city"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/country"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="2"
                android:background="@drawable/search_view_background"
                android:paddingStart="16dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_nav_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnRevertChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/revert_changes"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>