<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_nav_bar"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/fragment_home_item_background"
        android:contentDescription="@string/photo_image"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollable_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/size"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/size_spinner"
                android:layout_width="wrap_content"
                android:layout_height="36dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
